Improved parsing of echographies

--- a/compareAutomaticManual.ipynb
+++ b/compareAutomaticManual.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -14,9 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Read data"
    ]
@@ -24,20 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "nivelN1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def toInt(s, d = 1):\n",
@@ -68,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nivelN1 = pandas.read_csv('Data/nivelN1_manual.csv')\n",
@@ -96,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "len(set(nivelN1.columns))"
@@ -107,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pathFolder = 'Casos2019'\n",
@@ -131,9 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Explore differences\n",
     "\n",
@@ -144,9 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -158,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "c = 0\n",
@@ -182,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -194,9 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Check differences"
    ]
@@ -204,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfNamesVars = pandas.read_excel('parsingData/variables_sip.xlsx')\n",
@@ -231,9 +196,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renameDict['VAR_0283']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "commonCols = set(nivelN1.columns).intersection(automatic.columns)\n",
@@ -243,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nivelN1 = nivelN1.loc[~nivelN1.index.duplicated(keep='first')]"
@@ -254,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for i, k in enumerate(automatic2manual):\n",
@@ -272,9 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def hclin2pid(hClin):\n",
@@ -284,9 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "automatic[automatic.VAR_0019 == errors[25]]"
@@ -295,9 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "id = hclin2pid(errors[30])\n",
@@ -307,9 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "casos.loc['AD326269']"
@@ -318,9 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "id = hclin2pid('1050005797')\n",
@@ -330,9 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "j.VAR_0183"
@@ -341,9 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for _, i in automatic.iterrows():\n",
@@ -354,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "automatic.VAR_0183"
@@ -365,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -388,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
